# bmsCore

./: .env  .env.template  .gitignore  db.sqlite3  manage.py  pyproject.toml
bmsCore/: asgi.py  settings.py  urls.py  wsgi.py
bms_base/: admin.py  apps.py  models.py  urls.py  views.py
bms_base/bms_base_models/: departments.py  members.py  organizations.py
bms_base/migrations/: 0001_initial.py  0002_department_member.py  0003_department_department_date_created_and_more.py  0004_organization_creator_and_more.py  0005_department_department_mail_account.py  0006_department_department_recruting.py  0007_member_status.py
mailEngine/: admin.py  apps.py  models.py  urls.py  views.py
mailEngine/mail_engine_core/: reciever.py  sender.py
mailEngine/mail_engine_models/: contacts.py  flags.py  label.py  mail_accounts.py  mail_attachments.py  mail_body.py  mail_boxes.py  mail_head.py  mail_objects.py
mailEngine/migrations/: 0001_initial.py  0002_flag_flag_prominence.py  0003_remove_mailobject_user_account_flag_mail_box.py  0004_mailattachment_file_name_mailattachment_file_type.py  0005_mailattachment_file_extension.py  0006_flag_flag_imap_label.py  0007_flag_mail_number.py  0008_alter_mailhead_mail_date.py  0009_mailhead_mail_server_id.py  0010_mailhead_mail_account.py  0011_label_account_mails_label_label_flag.py  0012_alter_label_account_mails.py  0013_mailobject_user_account.py
media/164/attachments/: caldav-franklyne.adede@vincowoods.com.mobileconfig  carddav-franklyne.adede@vincowoods.com.mobileconfig  email-franklyne.adede@vincowoods.com.mobileconfig
(+26 files in other folders)
