[tool.poetry]
name = "dhana-bms-core"
version = "0.1.0"
description = "Dhana Business Management System"
authors = ["Franklyne Adede <adedefranklyne@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dhana_bms_core"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
mysqlclient = "^2.1.1"
python-decouple = "^3.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
